--- a/admin/adminTransaction.html
+++ b/admin/adminTransaction.html
@@ -4,14 +4,25 @@
   	<meta charset="utf-8">
   	<meta content="width=device-width, initial-scale=1.0" name="viewport">
   	<title>KOKOA BANK ADMIN</title>
-  	<!-- Google Fonts -->
-  	<link href="https://fonts.gstatic.com" rel="preconnect">
-  	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-	<!-- Vendor CSS Files -->
-  	<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  	<link href="assets/vendor/simple-datatables/style.css" rel="stylesheet">
-  	<!-- Template Main CSS File -->
-  	<link href="assets/css/style.css" rel="stylesheet">
+	<!-- 부트스트랩 -->
+	<link href="../html/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+	<!-- Fontawesome -->
+	<script src="https://kit.fontawesome.com/b05f67c88a.js" crossorigin="anonymous"></script>
+	<!-- Style CSS -->
+	<link href="../html/assets/css/style.css" rel="stylesheet">
+	<!-- Datatables -->
+	<script src="../html/assets/vendor/simple-datatables/simple-datatables.js"></script>
+	<link href="../html/assets/vendor/simple-datatables/style.css" rel="stylesheet">
+	<!-- Script JS -->
+	<script src="../html/assets/js/main.js"></script>
+	<!-- Google Fonts -->
+	<link href="https://fonts.gstatic.com" rel="preconnect">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+	<!-- font-family: 'Dongle', sans-serif; -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 	<header class="fixed-top container" id="header" style="width: 1320px; margin: auto;">
@@ -401,11 +412,5 @@
      		 &copy; Copyright <strong><span>KOKOA BANK</span></strong> Corp. All Rights Reserved
     	</div>
   	</footer>
-	<!-- Bootstrap JS Files -->
-	<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-	<!-- Datatables JS Files -->
-	<script src="assets/vendor/simple-datatables/simple-datatables.js"></script>
-	<!-- Template Main JS File -->
-	<script src="assets/js/main.js"></script>
 </body>
 </html>
