--- a/html/account.html
+++ b/html/account.html
@@ -5,19 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KOKOA BANK</title>
-    <!-- 부트스트랩 CSS -->
+    <!-- 부트스트랩 -->
   	<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 	<!-- JqueryUi -->
+	<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+	<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 	<!-- Fontawesome -->
 	<script src="https://kit.fontawesome.com/b05f67c88a.js" crossorigin="anonymous"></script>
+	<!-- Template Main CSS File -->
+	<link href="assets/css/style.css" rel="stylesheet">
+	<script src="assets/js/main.js"></script>
+  	<!-- Google Fonts -->
+  	<link href="https://fonts.gstatic.com" rel="preconnect">
+  	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 	<!-- font-family: 'Dongle', sans-serif; -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap" rel="stylesheet">		
 </head>
 <body>
-	<header class="fixed-top container" id="header" style="width: 1320px; margin: auto;">
+	<header class="fixed-top container" id="header">
 		<div class="container">
       		<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         		<ul class="nav col-auto me-auto mb-2 align-items-center">
@@ -41,7 +50,7 @@
       		</div>
     	</div>
 	</header>
-		<!-- 조회 -->
+	<!-- 조회 -->
 	<div id="myCarousel" class="carousel slide carousel-dark position-relative container" data-bs-touch="false" style="width: 1000px; height: 870px; padding: 100px 50px 0 50px; box-sizing: border-box; margin: auto;">
   		<div class="carousel-inner" style="margin: auto;">
 	    	<div class="carousel-item active">
@@ -58,7 +67,7 @@
 	    		<br>
 	    		<div class="d-flex justify-content-start">
 	    			<div class="col-1" style="margin-right: -3.6%;">
-	    				<button type="button" class="btn btn-danger" id="btnSearch">
+	    				<button type="button" class="btn btn-outline-danger" id="btnSearch">
 							<i class="fa-solid fa-magnifying-glass"></i>
 						</button>
 	    			</div>
@@ -77,8 +86,8 @@
     					<input type="text" class="form-control datepicker dateFinish" placeholder="종료일">
   					</div>
   					<div class="text-end" style="margin-left: 226px;">
-	    				<a class="btn btn-outline-success" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountAdd">계좌개설</a>
-	    				<a class="btn btn-outline-primary" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountCorrect" style="margin-left: -5.5px;">계좌수정</a>
+	    				<a class="btn btn-outline-secondary" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountAdd">계좌개설</a>
+	    				<a class="btn btn-outline-secondary" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountCorrect" style="margin-left: -5.5px;">계좌수정</a>
 	    			</div> 
 	    		</div>
 	    		<table class="table text-center">
@@ -198,8 +207,8 @@
     					<input type="text" class="form-control datepicker dateFinish" placeholder="종료일">
   					</div> 
   					<div class="text-end" style="margin-left: 226px;">
-	    				<a class="btn btn-outline-success" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountAdd">계좌개설</a>
-	    				<a class="btn btn-outline-primary" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountCorrect" style="margin-left: -5.5px;">계좌수정</a>
+	    				<a class="btn btn-outline-secondary" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountAdd">계좌개설</a>
+	    				<a class="btn btn-outline-secondary" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountCorrect" style="margin-left: -5.5px;">계좌수정</a>
 	    			</div> 
 	    		</div>
 	    		<table class="table text-center">
@@ -319,8 +328,8 @@
     					<input type="text" class="form-control datepicker dateFinish" placeholder="종료일">
   					</div> 
   					<div class="text-end" style="margin-left: 226px;">
-	    				<a class="btn btn-outline-success" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountAdd">계좌개설</a>
-	    				<a class="btn btn-outline-primary" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountCorrect" style="margin-left: -5.5px;">계좌수정</a>
+	    				<a class="btn btn-outline-secondary" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountAdd">계좌개설</a>
+	    				<a class="btn btn-outline-secondary" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountCorrect" style="margin-left: -5.5px;">계좌수정</a>
 	    			</div> 
 	    		</div>
 	    		<table class="table text-center">
@@ -422,8 +431,8 @@
 	  		<div class="modal-dialog">
 	    		<div class="modal-content" style="width: 622px; height: 439px; padding: 50px;">
 	      			<div class="modal-header d-flex justify-content-around">
-	        			<button type="button" class="btn w-50">계좌개설</button>
-	        			<button type="button" class="btn btn-outline-primary w-50" data-bs-toggle="modal" data-bs-target="#accountCorrect">계좌수정</button>
+	        			<button type="button" class="btn btn-outline-secondary w-50">계좌개설</button>
+	        			<button type="button" class="btn btn-outline-secondary w-50" data-bs-toggle="modal" data-bs-target="#accountCorrect">계좌수정</button>
 	      			</div>
 	      			<div class="modal-body d-flex flex-wrap align-items-center">
 						<input type="text" class="form-control" id="accountName" placeholder="계좌이름">
@@ -431,7 +440,7 @@
 						<input type="password" class="form-control" id="accountPwCheck" placeholder="비밀번호 확인">
 	      			</div>
 	      			<div class="modal-footer d-flex justify-content-center">
-	      				<button type="button" class="btn btn-outline-primary" id="modalCheck">확인</button>
+	      				<button type="button" class="btn btn-outline-secondary" id="modalCheck">확인</button>
 	      				<button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">취소</button>
 	      			</div>
 	    		</div>
@@ -443,8 +452,8 @@
 	  		<div class="modal-dialog">
 	    		<div class="modal-content" style="width: 622px; height: 622px; padding: 50px;">
 	      			<div class="modal-header d-flex justify-content-around">
-	        			<button type="button" class="btn w-50" data-bs-toggle="modal" data-bs-target="#accountAdd">계좌개설</button>
-	        			<button type="button" class="btn btn-outline-primary w-50">계좌수정</button>
+	        			<button type="button" class="btn btn-outline-secondary w-50" data-bs-toggle="modal" data-bs-target="#accountAdd">계좌개설</button>
+	        			<button type="button" class="btn btn-outline-secondary w-50">계좌수정</button>
 	      			</div>
 	      			<div class="modal-body d-flex flex-wrap align-items-center">
 	      				<input type="text" class="form-control" id="accountNumber" placeholder="계좌번호" disabled>
@@ -454,9 +463,9 @@
 						<input type="password" class="form-control" id="accountNewPwCheck" placeholder="비밀번호 확인">
 	      			</div>
 	      			<div class="modal-footer d-flex justify-content-center">
-	      				<button type="button" class="btn btn-outline-primary" id="modalCheck">확인</button>
+	      				<button type="button" class="btn btn-outline-secondary" id="modalCheck">확인</button>
 	      				<button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">취소</button>
-	      				<button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#deleteCheck">삭제</button>
+	      				<button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#deleteCheck">삭제</button>
 	      			</div>
 	    		</div>
 	  		</div>
@@ -472,7 +481,7 @@
         			정말로 삭제 하시겠습니까?
       			</div>
       			<div class="modal-footer d-flex justify-content-center">
-        			<button type="button" class="btn btn-outline-danger" id="modalDelete">삭제</button>
+        			<button type="button" class="btn btn-outline-secondary" id="modalDelete">삭제</button>
         			<button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">취소</button>
       			</div>
     		</div>
@@ -487,48 +496,5 @@
     		</div>
   		</footer>
 	</div>
-    <!-- 부트스트랩 JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    <!-- JQUERY -->
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-    <!-- JqueryUi -->
-    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-   	<!-- 스크립트 작성 -->
-    <script type="text/javascript">
-
-	 	// datepicker
-		$(function() {
-	
-			$(".datepicker").datepicker({
-				dateFormat: 'yy-mm-dd'
-			});
-	
-		});
-		
-	 	// 기간설정
-	 	$(".selectPeriod").on("change", function() {
-			var period = $(this).val();
-			var today = new Date();
-			var oneWeekAgo = new Date(today.getTime() - (7 * 24 * 60 * 60 * 1000));
-			var oneMonthAgo = new Date(today.getTime() - (30 * 24 * 60 * 60 * 1000));
-			var threeMonthsAgo = new Date(today.getTime() - (90 * 24 * 60 * 60 * 1000));
-			
-			switch (period) {
-			  	case "1주일":
-					$(".dateStart").datepicker("setDate", oneWeekAgo);
-					$(".dateFinish").datepicker("setDate", today);
-					break;
-			  	case "1개월":
-					$(".dateStart").datepicker("setDate", oneMonthAgo);
-					$(".dateFinish").datepicker("setDate", today);
-					break;
-			  	case "3개월":
-					$(".dateStart").datepicker("setDate", threeMonthsAgo);
-					$(".dateFinish").datepicker("setDate", today);
-					break;
-			}
-		});
-	 	
-    </script>
 </body>
 </html>
