--- a/html/index.html
+++ b/html/index.html
@@ -5,12 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KOKOA BANK</title>
-    <!-- 부트스트랩 CSS -->
-  	<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<!-- 부트스트랩 -->
+	<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+	<!-- JqueryUi -->
+	<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+	<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+	<!-- Fontawesome -->
+	<script src="https://kit.fontawesome.com/b05f67c88a.js" crossorigin="anonymous"></script>
+	<!-- Template Main CSS File -->
+	<link href="assets/css/style.css" rel="stylesheet">
+	<script src="assets/js/main.js"></script>
+	<!-- Google Fonts -->
+	<link href="https://fonts.gstatic.com" rel="preconnect">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 	<!-- font-family: 'Dongle', sans-serif; -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap" rel="stylesheet">	
 </head>
 <body>
 	<header class="fixed-top container" id="header" style="width: 1320px; margin: auto;">
@@ -46,7 +59,7 @@
 		<div class="row-md d-flex justify-content-center" style="padding: 50px; font-family: 'Dongle', sans-serif;">
 			<div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
 				<img src="assets/img/influencer1.jpg" class="card-img-top" alt="주식단테" style="margin-bottom: -15px;">
-				<div class="fs-1 text-center" style="margin-bottom: -20px; margin-top: 30px;">주식단테</div>
+				<div class="fs-1 text-center py-4">주식단테</div>
 				<div class="card-body d-flex justify-content-center align-items-end">
 					<div>
 						<a href="https://www.youtube.com/channel/UC6ij59Gy_HnqO4pFu9A_zgQ" style="text-decoration: none;" class="fs-1 px-2">
@@ -62,7 +75,7 @@
 		  	</div>
 			<div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
 				<img src="assets/img/influencer2.jpg" class="card-img-top" alt="삼프로TV" style="margin-bottom: -15px;">
-				<div class="fs-1 text-center" style="margin-bottom: -20px; margin-top: 30px;">삼프로TV</div>
+				<div class="fs-1 text-center py-4">삼프로TV</div>
 				<div class="card-body d-flex justify-content-center align-items-end">
 					<div>
 						<a href="https://www.youtube.com/channel/UC6ij59Gy_HnqO4pFu9A_zgQ" style="text-decoration: none;" class="fs-1 px-2">
@@ -78,7 +91,7 @@
 			</div>
 			<div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
 				<img src="assets/img/influencer3.jpg" class="card-img-top" alt="슈카월드" style="margin-bottom: -15px;">
-				<div class="fs-1 text-center" style="margin-bottom: -20px; margin-top: 30px;">슈카월드</div>
+				<div class="fs-1 text-center py-4">슈카월드</div>
 				<div class="card-body d-flex justify-content-center align-items-end">
 					<div>
 						<a href="https://www.youtube.com/channel/UC6ij59Gy_HnqO4pFu9A_zgQ" style="text-decoration: none;" class="fs-1 px-2">
@@ -94,7 +107,7 @@
 		  	</div>
 			  <div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
 				<img src="assets/img/influencer4.jpg" class="card-img-top" alt="테미녀" style="margin-bottom: -15px;">
-				<div class="fs-1 text-center" style="margin-bottom: -20px; margin-top: 30px;">테미녀</div>
+				<div class="fs-1 text-center py-4">테미녀</div>
 				<div class="card-body d-flex justify-content-center align-items-end">
 					<div>
 						<a href="https://www.youtube.com/channel/UC6ij59Gy_HnqO4pFu9A_zgQ" style="text-decoration: none;" class="fs-1 px-2">
@@ -110,7 +123,7 @@
 		  	</div>
 			<div class="card" style="width: 13rem; height: 330px; margin: 0 20px;">
 				<img src="assets/img/influencer5.jpg" class="card-img-top" alt="천덩이" style="margin-bottom: -15px;">
-				<div class="fs-1 text-center" style="margin-bottom: -20px; margin-top: 30px;">천덩이</div>
+				<div class="fs-1 text-center py-4">천덩이</div>
 				<div class="card-body d-flex justify-content-center align-items-end">
 					<div>
 						<a href="https://www.youtube.com/channel/UC6ij59Gy_HnqO4pFu9A_zgQ" style="text-decoration: none;" class="fs-1 px-2">
@@ -139,12 +152,5 @@
     		</div>
   		</footer>
 	</div>
-	<!-- 부트스트랩 JS -->
-	<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-	<script type="text/javascript">	
-		
-		 	
-	
-    </script>
 </body>
 </html>
