--- a/html/register.html
+++ b/html/register.html
@@ -4,14 +4,25 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 	<title>KOKOA BANK REGISTER</title>
+    <!-- 부트스트랩 -->
+	<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+	<!-- JqueryUi -->
+	<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+	<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+	<!-- Fontawesome -->
+	<script src="https://kit.fontawesome.com/b05f67c88a.js" crossorigin="anonymous"></script>
+	<!-- Template Main CSS File -->
+	<link href="assets/css/style.css" rel="stylesheet">
+	<script src="assets/js/main.js"></script>
   	<!-- Google Fonts -->
   	<link href="https://fonts.gstatic.com" rel="preconnect">
   	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-	<!-- Vendor CSS Files -->
-  	<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  	<link href="assets/vendor/simple-datatables/style.css" rel="stylesheet">
-  	<!-- Template Main CSS File -->
-  	<link href="assets/css/style.css" rel="stylesheet">
+	<!-- font-family: 'Dongle', sans-serif; -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 	<main>
@@ -66,7 +77,7 @@
                								<div class="invalid-feedback">전화번호를 입력해 주세요.</div>
                 						</div>
                   						<div class="col-12">
-                   							<button class="btn btn-primary w-100" type="submit">회원가입</button>
+                   							<button class="btn btn-outline-secondary w-100" type="submit">회원가입</button>
                    						</div>
                    						<div class="col-12">
                    							<p class="small mb-0">이미 계정이 있으신가요? <a href="login.html">로그인</a></p>
@@ -74,19 +85,11 @@
                						</form>
                					</div>
            					</div>
-              				<div class="credits">
-                				<a href="index.html">KOKOA BANK</a>
-              				</div>
             			</div>
           			</div>
         		</div>
       		</section>
     	</div>
   	</main>
-	<!-- Vendor JS Files -->
-	<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-	<script src="assets/vendor/simple-datatables/simple-datatables.js"></script>
-	<!-- Template Main JS File -->
-	<script src="assets/js/main.js"></script>
 </body>
 </html>
